Modif barres en flexbox html et css

--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,11 @@
                 <h1>La note enchantée</h1>
                 <div id="menu_lne">
                     <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
-                    <h2 class="h2_lne">Prélude</h2>
+                    <div class="lne_title">
+                        <hr class="hr_lne"/>
+                        <h2 class="h2_lne">Prélude</h2>
+                        <hr class="hr_lne"/>
+                    </div>
                     <div class="m_section">
                         <div class="dish">
                             <p>Ravioles de fois gras accompagnés de leur crème à la truffe</p>
@@ -38,7 +42,11 @@
                             <p><strong>105€</strong></p>
                         </div>
                     </div>
-                    <h2 class="h2_lne">Point d'orgue</h2>
+                    <div class="lne_title">
+                        <hr class="hr_lne"/>
+                        <h2 class="h2_lne">Point d'orgue</h2>
+                        <hr class="hr_lne"/>
+                    </div>
                     <div class="m_section">
                         <div class="dish">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
@@ -53,18 +61,22 @@
                             <p><strong>169€</strong></p>
                         </div>
                     </div>
-                    <h2 class="h2_lne">Mouvement final</h2>
-                        <div class="m_section">
-                            <div class="dish">
-                                <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
-                            </div>
-                            <div class="dish">
-                                <p>Baba au rhum revisité avec son coulis de citron</p>
-                            </div>
-                            <div class="dish">
-                                <p>Tarte au citron meringuée destructurée</p>
-                            </div>
+                    <div class="lne_title">
+                        <hr class="hr_lne"/>
+                        <h2 class="h2_lne">Mouvement final</h2>
+                        <hr class="hr_lne"/>
+                    </div>
+                    <div class="m_section">
+                        <div class="dish">
+                            <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
                         </div>
+                        <div class="dish">
+                            <p>Baba au rhum revisité avec son coulis de citron</p>
+                        </div>
+                        <div class="dish">
+                            <p>Tarte au citron meringuée destructurée</p>
+                        </div>
+                    </div>
                     <img src="resources/logobmenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
                 </div>
             </section>
