--- a/index3.html
+++ b/index3.html
@@ -15,12 +15,16 @@
         </header>
         <!--Menus-->
         <div id="content">
-            <h1>Le chic à la française</h1>
+            <h1>Le chic à la française</h1>                      
             <section id="menu_lcf">
                 <img src="resources/logomenu-2.png" alt="logo Le chic à la française" titre="logo Le chic à la française" id="logo_lcf"/>
                 <!--Entrees-->
                 <article id="top_m">
-                    <h2 class="h2_lcf_t">Pour se mettre en appétit</h2>
+                    <div class="lcf_title">
+                        <hr class="hr_lcf_t"/>
+                        <h2 class="h2_lcf_t">Pour se mettre en appétit</h2>
+                        <hr class="hr_lcf_t"/>
+                    </div>
                     <div class="m_section">
                         <div class="dish">
                             <p>Tartare de poulpe acidulé aux zestes d'orange</p>
@@ -38,7 +42,11 @@
                 </article>
                 <!--Plats-->
                 <article id="mid_m">
-                    <h2 class="h2_lcf_m">Plaisir des papilles</h2>
+                    <div class="lcf_title">
+                        <hr class="hr_lcf_m"/>
+                        <h2 class="h2_lcf_m">Plaisir des papilles</h2>
+                        <hr class="hr_lcf_m"/>
+                    </div>
                     <div class="m_section">
                         <div class="dish">
                             <p>Coquilles Saint-Jacques accompagnées d'une purée de Panais</p>
@@ -56,7 +64,11 @@
                 </article>
                 <!--Desserts-->
                 <article id="bot_m">
-                    <h2 class="h2_lcf_b">Gourmandises sucrées</h2>
+                    <div class="lcf_title">
+                        <hr class="hr_lcf_b"/>
+                        <h2 class="h2_lcf_b">Gourmandises sucrées</h2>
+                        <hr class="hr_lcf_b"/>
+                    </div>
                     <div class="m_section" id>
                         <div class="dish">
                             <p>Pétales de violettes glacés et purée de noisette</p>
