--- a/index4.html
+++ b/index4.html
@@ -18,7 +18,11 @@
             <h1>Le délice des papilles</h1>
             <section id="menu_ldp">
                 <img src="resources/logomenu-3.png" alt="logo Le délice des papilles" titre="logo Le délice des papilles" id="logo_ldp"/>
-                <h2 class="h2_ldp_t">Pour bien commencer</h2>
+                <div class="ldp_title">
+                    <hr class="hr_ldp_t"/>
+                    <h2 class="h2_ldp_t">Pour bien commencer</h2>
+                    <hr class="hr_ldp_t"/>
+                </div>
                 <article class="m_section">
                     <div class="dish">
                         <p>Tartare de thon assaisonné au yuzu</p>
@@ -33,7 +37,11 @@
                         <p>56€</p>
                     </div>
                 </article>
-                <h2 class="h2_ldp_m">Pour bien continuer</h2>
+                <div class="ldp_title">
+                    <hr class="hr_ldp_m"/>
+                    <h2 class="h2_ldp_m">Pour bien continuer</h2>
+                    <hr class="hr_ldp_m"/>
+                </div>
                 <article class="m_section">
                     <div class="dish">
                         <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
@@ -48,7 +56,11 @@
                         <p>115€</p>
                     </div>
                 </article>
-                <h2 class="h2_ldp_b">Pour bien terminer</h2>
+                <div class="ldp_title">
+                    <hr class="hr_ldp_b"/>
+                    <h2 class="h2_ldp_b">Pour bien terminer</h2>
+                    <hr class="hr_ldp_b"/>
+                </div>
                 <article class="m_section">
                     <div class="dish">
                         <p>Farandole de desserts du chef</p>
