--- a/index5.html
+++ b/index5.html
@@ -19,7 +19,11 @@
             <section>
                 <div id="menu_lpg">
                     <img src="resources/logomenu-4.png" alt="logo La palette du goût" titre="logo La palette du goût" id="logo_lpg"/>
-                    <h2 class="h2_lpg_t">Esquisse</h2>
+                    <div class="lpg_title">
+                        <hr class="hr_lpg_tb"/>
+                        <h2 class="h2_lpg_t">Esquisse</h2>
+                        <hr class="hr_lpg_ta"/>
+                    </div>
                     <article class="m_section">
                         <div class="dish">
                             <p>Fricassée d'escargot au piment d'espelette</p>
@@ -34,7 +38,11 @@
                             <p>65€</p>
                         </div>
                     </article>
-                    <h2 class="h2_lpg_m">Oeuvre de maître</h2>
+                    <div class="lpg_title">
+                        <hr class="hr_lpg_mb"/>
+                        <h2 class="h2_lpg_m">Oeuvre de maître</h2>
+                        <hr class="hr_lpg_ma"/>
+                    </div>
                     <article class="m_section">
                         <div class="dish">
                             <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
@@ -48,8 +56,12 @@
                             <p>Filet de Turbot aux agrumes</p>
                             <p>125€</p>
                         </div>
-                    </article>        
-                    <h2 class="h2_lpg_b">Au sommet de l'art</h2>
+                    </article>     
+                    <div class="lpg_title">
+                        <hr class="hr_lpg_bb"/>   
+                        <h2 class="h2_lpg_b">Au sommet de l'art</h2>
+                        <hr class="hr_lpg_ba"/>  
+                    </div>
                     <article class="m_section">
                         <div class="dish">
                             <p>Paris-Brest revisité</p>
