maj anim underline

--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
                     <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne">Prélude</h2>
+                        <h2 class="h2_lne line">Prélude</h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
