--- a/index6.html
+++ b/index6.html
@@ -11,8 +11,9 @@
                 <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
         </header>
-        <div>
+        <div id="legal">
             <h1><strong>Mentions Légales</strong></h1>
+            <br/>
             <h3>Informations légales</h3>
             <h3>1. Présentation du site.</h3>
             <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://www.ohmyfood.fr/">www.ohmyfood.fr</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
