maj fix animations zoom next wiggle

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </section>
         </div>
             <!--Prochainement-->
-        <aside id="next">
-            <p>Prochainement</p>
-        </aside>
+        <button id="next">
+            Prochainement<span class="point1 point">.</span><span class="point2 point">.</span><span class="point3 point">.</span>
+        </button>
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
