maj titres degradé menus 2/3/4

--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@
         <div id="content">
             <h1>Le chic à la française</h1>                      
             <section id="menu_lcf">
-                <div id="lcf_logo">Le chic a la française</div>
+                <div id="lcf_logo">Le chic à la française</div>
                 <!--Entrees-->
                 <article id="top_m">
                     <div class="lcf_title">
