--- a/index4.html
+++ b/index4.html
@@ -17,7 +17,8 @@
         <div id="content">
             <h1>Le délice des papilles</h1>
             <section id="menu_ldp">
-                <img src="resources/logomenu-3.png" alt="logo Le délice des papilles" titre="logo Le délice des papilles" id="logo_ldp"/>
+                <div id="ldp_logo">Le délice des papilles</div>
+                <!--Entrees-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_t"/>
                     <h2 class="h2_ldp_t">Pour bien commencer</h2>
@@ -37,6 +38,7 @@
                         <p>56€</p>
                     </div>
                 </article>
+                <!--Plats-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_m"/>
                     <h2 class="h2_ldp_m">Pour bien continuer</h2>
@@ -56,6 +58,7 @@
                         <p>115€</p>
                     </div>
                 </article>
+                <!--Desserts-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_b"/>
                     <h2 class="h2_ldp_b">Pour bien terminer</h2>
