--- a/index5.html
+++ b/index5.html
@@ -18,7 +18,8 @@
             <h1>La palette du goût</h1>
             <section>
                 <div id="menu_lpg">
-                    <img src="resources/logomenu-4.png" alt="logo La palette du goût" titre="logo La palette du goût" id="logo_lpg"/>
+                    <div id="lpg_logo">La palette du goût</div>
+                    <!--Entrees-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_tb"/>
                         <h2 class="h2_lpg_t">Esquisse</h2>
@@ -38,6 +39,7 @@
                             <p>65€</p>
                         </div>
                     </article>
+                    <!--Plats-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_mb"/>
                         <h2 class="h2_lpg_m">Oeuvre de maître</h2>
@@ -56,7 +58,8 @@
                             <p>Filet de Turbot aux agrumes</p>
                             <p>125€</p>
                         </div>
-                    </article>     
+                    </article> 
+                    <!--Desserts-->    
                     <div class="lpg_title">
                         <hr class="hr_lpg_bb"/>   
                         <h2 class="h2_lpg_b">Au sommet de l'art</h2>
