Maj animation soulignement

--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne">Point d'orgue</h2>
+                        <h2 class="h2_lne line">Point d'orgue</h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne">Mouvement final</h2>
+                        <h2 class="h2_lne line">Mouvement final</h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
