--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
                 <article id="top_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_t"/>
-                        <h2 class="h2_lcf_t">Pour se mettre en appétit</h2>
+                        <h2 class="line">Pour se mettre en appétit</h2>
                         <hr class="hr_lcf_t"/>
                     </div>
                     <div class="m_section">
@@ -44,7 +44,7 @@
                 <article id="mid_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_m"/>
-                        <h2 class="h2_lcf_m">Plaisir des papilles</h2>
+                        <h2 class="line">Plaisir des papilles</h2>
                         <hr class="hr_lcf_m"/>
                     </div>
                     <div class="m_section">
@@ -66,7 +66,7 @@
                 <article id="bot_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_b"/>
-                        <h2 class="h2_lcf_b">Gourmandises sucrées</h2>
+                        <h2 class="line">Gourmandises sucrées</h2>
                         <hr class="hr_lcf_b"/>
                     </div>
                     <div class="m_section" id>
