--- a/index5.html
+++ b/index5.html
@@ -22,7 +22,7 @@
                     <!--Entrees-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_tb"/>
-                        <h2 class="h2_lpg_t">Esquisse</h2>
+                        <h2 class="h2_lpg_t line">Esquisse</h2>
                         <hr class="hr_lpg_ta"/>
                     </div>
                     <article class="m_section">
@@ -42,7 +42,7 @@
                     <!--Plats-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_mb"/>
-                        <h2 class="h2_lpg_m">Oeuvre de maître</h2>
+                        <h2 class="h2_lpg_m line">Oeuvre de maître</h2>
                         <hr class="hr_lpg_ma"/>
                     </div>
                     <article class="m_section">
@@ -62,7 +62,7 @@
                     <!--Desserts-->    
                     <div class="lpg_title">
                         <hr class="hr_lpg_bb"/>   
-                        <h2 class="h2_lpg_b">Au sommet de l'art</h2>
+                        <h2 class="h2_lpg_b line">Au sommet de l'art</h2>
                         <hr class="hr_lpg_ba"/>  
                     </div>
                     <article class="m_section">
