--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,10 @@
             <section> 
                 <h1>La note enchantée</h1>
                 <div id="menu_lne">
-                    <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
+                    <div id="lne_top">
+                        <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_top"/>
+                        <span id="top_title">La note enchantée</span>
+                    </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
                         <h2 class="h2_lne line">Prélude</h2>
@@ -77,7 +80,10 @@
                             <p>Tarte au citron meringuée destructurée</p>
                         </div>
                     </div>
-                    <img src="resources/logobmenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
+                    <div id="lne_bot">
+                        <img  src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_bot"/>
+                        <span id="bot_title">La note enchantée</span>
+                    </div>
                 </div>
             </section>
         </div>
