--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne line">Prélude</h2>
+                        <h2 class="h2_lne line line1"><span>Prélude</span><div class="souligne"></div></h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
@@ -47,7 +47,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne line">Point d'orgue</h2>
+                        <h2 class="h2_lne line line1"><span>Point d'orgue</span><div class="souligne"></div></h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne"/>
-                        <h2 class="h2_lne line">Mouvement final</h2>
+                        <h2 class="h2_lne line line1"><span>Mouvement final</span><div class="souligne"></div></h2>
                         <hr class="hr_lne"/>
                     </div>
                     <div class="m_section">
