maj bouton next

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             </section>
         </div>
             <!--Prochainement-->
-        <button id="next">
-            Prochainement<span class="point1 point">.</span><span class="point2 point">.</span><span class="point3 point">.</span>
-        </button>
+        <div id="bouton">
+            <button id="next">
+                Prochainement<span class="point1 point">.</span><span class="point2 point">.</span><span class="point3 point">.</span>
+            </button>
+        </div>
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
