--- a/index2.html
+++ b/index2.html
@@ -23,9 +23,9 @@
                         <span id="top_title">La note enchantée</span>
                     </div>
                     <div class="lne_title">
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_t"/>
                         <h2 class="h2_lne line line1"><span>Prélude</span><div class="souligne"></div></h2>
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_t"/>
                     </div>
                     <div class="m_section">
                         <div class="dish">
@@ -46,9 +46,9 @@
                         </div>
                     </div>
                     <div class="lne_title">
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_m"/>
                         <h2 class="h2_lne line line1"><span>Point d'orgue</span><div class="souligne"></div></h2>
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_m"/>
                     </div>
                     <div class="m_section">
                         <div class="dish">
@@ -65,9 +65,9 @@
                         </div>
                     </div>
                     <div class="lne_title">
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_b"/>
                         <h2 class="h2_lne line line1"><span>Mouvement final</span><div class="souligne"></div></h2>
-                        <hr class="hr_lne"/>
+                        <hr class="hr_lne_b"/>
                     </div>
                     <div class="m_section">
                         <div class="dish">
