--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
                 <h1>La note enchantée</h1>
                 <div id="menu_lne">
                     <div id="lne_top">
-                        <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_top"/>
+                        <img src="resources/logomenu-1.png" alt="logo La note enchantée" title="logo La note enchantée" id="logo_top"/>
                         <span id="top_title">La note enchantée</span>
                     </div>
                     <div class="lne_title">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div id="lne_bot">
-                        <img  src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_bot"/>
+                        <img  src="resources/logomenu-1.png" alt="logo La note enchantée" title="logo La note enchantée" id="logo_bot"/>
                         <span id="bot_title">La note enchantée</span>
                     </div>
                 </div>
