--- a/index3.html
+++ b/index3.html
@@ -69,7 +69,7 @@
                         <h2 class="line line4"><span>Gourmandises sucrées</span><div class="souligne"></div></h2>
                         <hr class="hr_lcf_b"/>
                     </div>
-                    <div class="m_section" id>
+                    <div class="m_section">
                         <div class="dish">
                             <p>Pétales de violettes glacés et purée de noisette</p>
                         </div>
