--- a/index6.html
+++ b/index6.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
     <head>
         <meta charset="utf-8"/>
@@ -23,9 +24,6 @@
             Le responsable publication est une personne physique ou une personne morale.<br />
             <strong>Webmaster</strong> : Nora Lo – contact@ohmyfood.fr<br />
             <strong>Hébergeur</strong> : Ohmyfood! – 2 rue du Temple 75001 Paris<br />
-            Crédits : <br />
-            Le modèle de mentions légales est offert par Subdelirium.com <a target="_blank" href="https://www.subdelirium.com/generateur-de-mentions-legales/" alt="generateur de mentions légales">Générateur de mentions légales</a></p>
-
             <h3>2. Conditions générales d’utilisation du site et des services proposés.</h3>
             <p>L’utilisation du site <a href="http://www.ohmyfood.fr/">www.ohmyfood.fr</a> implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site <a href="http://www.ohmyfood.fr/">www.ohmyfood.fr</a> sont donc invités à les consulter de manière régulière.</p>
             <p>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de maintenance technique peut être toutefois décidée par Ohmyfood!, qui s’efforcera alors de communiquer préalablement aux utilisateurs les dates et heures de l’intervention.</p>
