--- a/menu1.html
+++ b/menu1.html
@@ -11,7 +11,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
     </header>
         <!--Menus-->
@@ -25,7 +25,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne_t"/>
-                        <h2 class="h2_lne line line1"><span>Prélude</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lne line line1"><span>Prélude</span><span class="souligne"></span></h2>
                         <hr class="hr_lne_t"/>
                     </div>
                     <div class="m_section">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne_m"/>
-                        <h2 class="h2_lne line line1"><span>Point d'orgue</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lne line line1"><span>Point d'orgue</span><span class="souligne"></span></h2>
                         <hr class="hr_lne_m"/>
                     </div>
                     <div class="m_section">
@@ -67,7 +67,7 @@
                     </div>
                     <div class="lne_title">
                         <hr class="hr_lne_b"/>
-                        <h2 class="h2_lne line line1"><span>Mouvement final</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lne line line1"><span>Mouvement final</span><span class="souligne"></span></h2>
                         <hr class="hr_lne_b"/>
                     </div>
                     <div class="m_section">
