--- a/menu2.html
+++ b/menu2.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
         </header>
         <!--Menus-->
@@ -22,7 +22,7 @@
                 <article id="top_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_t"/>
-                        <h2 class="line line2"><span>Pour se mettre en appétit</span><div class="souligne"></div></h2>
+                        <h2 class="line line2"><span>Pour se mettre en appétit</span><span class="souligne"></span></h2>
                         <hr class="hr_lcf_t"/>
                     </div>
                     <div class="m_section">
@@ -44,7 +44,7 @@
                 <article id="mid_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_m"/>
-                        <h2 class="line line3"><span>Plaisir des papilles</span><div class="souligne"></div></h2>
+                        <h2 class="line line3"><span>Plaisir des papilles</span><span class="souligne"></span></h2>
                         <hr class="hr_lcf_m"/>
                     </div>
                     <div class="m_section">
@@ -66,7 +66,7 @@
                 <article id="bot_m">
                     <div class="lcf_title">
                         <hr class="hr_lcf_b"/>
-                        <h2 class="line line4"><span>Gourmandises sucrées</span><div class="souligne"></div></h2>
+                        <h2 class="line line4"><span>Gourmandises sucrées</span><span class="souligne"></span></h2>
                         <hr class="hr_lcf_b"/>
                     </div>
                     <div class="m_section">
