--- a/menu3.html
+++ b/menu3.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
     </header>
         <!--Menus-->
@@ -21,7 +21,7 @@
                 <!--Entrees-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_t"/>
-                    <h2 class="h2_ldp_t line line5"><span>Pour bien commencer</span><div class="souligne"></div></h2>
+                    <h2 class="h2_ldp_t line line5"><span>Pour bien commencer</span><span class="souligne"></span></h2>
                     <hr class="hr_ldp_t"/>
                 </div>
                 <article class="m_section">
@@ -41,7 +41,7 @@
                 <!--Plats-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_m"/>
-                    <h2 class="h2_ldp_m line line6"><span>Pour bien continuer</span><div class="souligne"></div></h2>
+                    <h2 class="h2_ldp_m line line6"><span>Pour bien continuer</span><span class="souligne"></span></h2>
                     <hr class="hr_ldp_m"/>
                 </div>
                 <article class="m_section">
@@ -61,7 +61,7 @@
                 <!--Desserts-->
                 <div class="ldp_title">
                     <hr class="hr_ldp_b"/>
-                    <h2 class="h2_ldp_b line line7"><span>Pour bien terminer</span><div class="souligne"></div></h2>
+                    <h2 class="h2_ldp_b line line7"><span>Pour bien terminer</span><span class="souligne"></span></h2>
                     <hr class="hr_ldp_b"/>
                 </div>
                 <article class="m_section">
