--- a/accueil.html
+++ b/accueil.html
@@ -10,25 +10,25 @@
         <!--En tête de la page-->
         <header>
                 <div id="logo">
-                    <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                    <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
                 </div>
         </header>
         <!--Menus-->
         <div id="content">
             <section id="top">
                 <div class="menu"> 
-                    <a href="index2.html" class="navigation"><img src="resources/menu-1b.png" alt="Menu La note enchantée" title="Menu La note enchantée"/></a>
+                    <a href="menu1.html" class="navigation"><img src="resources/menu-1b.png" alt="Menu La note enchantée" title="Menu La note enchantée"/></a>
                 </div>
                 <div class="menu">
-                    <a href="index3.html" class="navigation"><img src="resources/menu-2b.png" alt="Menu Le chic à la Française" title="Menu Le chic à la française"/></a>
+                    <a href="menu2.html" class="navigation"><img src="resources/menu-2b.png" alt="Menu Le chic à la Française" title="Menu Le chic à la française"/></a>
                 </div>
             </section>
             <section id="bottom">
                 <div class="menu">
-                    <a href="index4.html" class="navigation"><img src="resources/menu-3b.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/></a>
+                    <a href="menu3.html" class="navigation"><img src="resources/menu-3b.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/></a>
                 </div>
                 <div class="menu">   
-                    <a href="index5.html" class="navigation"><img src="resources/menu-4b.png" alt="Menu La palette du goût" title="Menu La palette du goût"/></a>
+                    <a href="menu4.html" class="navigation"><img src="resources/menu-4b.png" alt="Menu La palette du goût" title="Menu La palette du goût"/></a>
                 </div>
             </section>
         </div>
@@ -41,7 +41,7 @@
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
-                <a href="index6.html">Mentions légales</a>
+                <a href="mentionslegales.html">Mentions légales</a>
             </div>
             <div id="contact">
                 <a href="mailto:contact@ohmyfood.fr">Contactez-nous</a>
