--- a/menu4.html
+++ b/menu4.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
         </header>
         <!--Menus-->
@@ -22,7 +22,7 @@
                     <!--Entrees-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_tb"/>
-                        <h2 class="h2_lpg_t line line8"><span>Esquisse</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lpg_t line line8"><span>Esquisse</span><span class="souligne"></span></h2>
                         <hr class="hr_lpg_ta"/>
                     </div>
                     <article class="m_section">
@@ -42,7 +42,7 @@
                     <!--Plats-->
                     <div class="lpg_title">
                         <hr class="hr_lpg_mb"/>
-                        <h2 class="h2_lpg_m line line8"><span>Oeuvre de maître</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lpg_m line line8"><span>Oeuvre de maître</span><span class="souligne"></span></h2>
                         <hr class="hr_lpg_ma"/>
                     </div>
                     <article class="m_section">
@@ -62,7 +62,7 @@
                     <!--Desserts-->    
                     <div class="lpg_title">
                         <hr class="hr_lpg_bb"/>   
-                        <h2 class="h2_lpg_b line line8"><span>Au sommet de l'art</span><div class="souligne"></div></h2>
+                        <h2 class="h2_lpg_b line line8"><span>Au sommet de l'art</span><span class="souligne"></span></h2>
                         <hr class="hr_lpg_ba"/>  
                     </div>
                     <article class="m_section">
