--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
                 <div id="logo">
-                    <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                    <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
                 </div>
         </header>
         <!--Menus-->
