--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -9,7 +9,7 @@
     <body> 
         <header>
             <div id="logo">
-                <a href="accueil.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
+                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
         </header>
         <div id="legal">
